# kagami-stream

./: Cargo.toml  README.md
src/: commands.rs  config.rs  error.rs  main.rs
