[package]
name = "kagami-stream"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.5"
mpd = "0.0.12"
clap = "~2.32"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }